Added links to table headers

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,10 +4,10 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
-      %th Rating
-      %th Release Date
-      %th More Info
+      %th= link_to "Movie Title", movies_path({:sort_by => "Movie Title"})
+      %th= link_to "Rating", movies_path({:sort_by => "Rating"})
+      %th= link_to "Release Date", movies_path({:sort_by => "Release Date"})
+      %th= link_to "More Info", movies_path({:sort_by => "More Info"})
   %tbody
     - @movies.each do |movie|
       %tr
