--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,9 @@
 %table#movies
   %thead
     %tr
-      %th= link_to "Movie Title", movies_path({:sort_by => "Movie Title"})
-      %th= link_to "Rating", movies_path({:sort_by => "Rating"})
-      %th= link_to "Release Date", movies_path({:sort_by => "Release Date"})
+      %th{:class => ("hilite" if @hilite[:title])}= link_to "Movie Title", movies_path({:sort_by => "Movie Title"})
+      %th{:class => ("hilite" if @hilite[:rating])}= link_to "Rating", movies_path({:sort_by => "Rating"})
+      %th{:class => ("hilite" if @hilite[:release_date])}= link_to "Release Date", movies_path({:sort_by => "Release Date"})
       %th More Info
   %tbody
     - @movies.each do |movie|
